Closed Bug 1244330 Opened 8 years ago Closed 8 years ago

Intermittent beta test_cache_delete.html | application crashed [@ mozilla::dom::workers::ServiceWorkerJobQueue::Append]

Categories

(Core :: DOM: Service Workers, defect)

45 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
firefox44 --- unaffected
firefox45 --- fixed
firefox46 --- unaffected
firefox47 --- unaffected

People

(Reporter: KWierso, Assigned: bkelly)

References

Details

(Keywords: intermittent-failure, regression)

Crash Data

Attachments

(1 file)

Component: DOM → DOM: Service Workers
Flags: needinfo?(bkelly)
This has shown up in the wild on windows as well.
Assignee: nobody → bkelly
Status: NEW → ASSIGNED
Crash Signature: mozilla::dom::workers::ServiceWorkerJobQueue::Append
Flags: needinfo?(bkelly)
This is due to a bad uplift of bug 1241531.  We accidentally are shadowing the mCanceled flag between ServiceWorkerJob and ServiceWorkerJobBase.
Blocks: 1241531
This only affects beta because it was introduced during an uplift.
Attachment #8720454 - Flags: review?(josh) → review+
Comment on attachment 8720454 [details] [diff] [review]
Remove unused mCanceled from ServiceWorkerJobBase which shadowed ServiecWorkerJob. r=jdm

Approval Request Comment
[Feature/regressing bug #]: Introduced during uplift of bug 1241531.
[User impact if declined]: Crashes seen in the wild.
[Describe test coverage new/current, TreeHerder]:  The mochitest coverage which is being triggered in this bug.
[Risks and why]: Minimal.  This equivalent of this fix has been running on trunk for over a month now.
[String/UUID change made/needed]:  None.
Attachment #8720454 - Flags: approval-mozilla-beta?
Keywords: regression
Comment on attachment 8720454 [details] [diff] [review]
Remove unused mCanceled from ServiceWorkerJobBase which shadowed ServiecWorkerJob. r=jdm

Fix an intermittent, taking it.
Should be in 45 beta 7
Attachment #8720454 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
https://hg.mozilla.org/releases/mozilla-beta/rev/602b6830dcf9
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: