Bug 1244330 - Remove unused mCanceled from ServiceWorkerJobBase which shadowed ServiecWorkerJob. r=jdm. a=sylvestre